src/tests/snapshots/gitu__tests__discard__branch_selected.snap
---
source: src/tests/discard.rs
assertion_line: 129
expression: ctx.redact_buffer()
---
 Branches                                                                       |
 * main add initial-file                                                 b66a0bf|
▌  unmerged add first commit                                             c84f226|
                                                                                |
 Remote origin                                                                  |
   origin/HEAD add initial-file                                          b66a0bf|
   origin/main add initial-file                                          b66a0bf|
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git branch -d merged                                                          |
Deleted branch merged (was b66a0bf).                                            |
styles_hash: 48edd4e473c7d12b
