src/tests/snapshots/gitu__tests__discard__branch_selected_confirm.snap
---
source: src/tests/discard.rs
assertion_line: 124
expression: ctx.redact_buffer()
---
 Branches                                                                       |
 * main add initial-file                                                 b66a0bf|
▌  merged add initial-file                                               b66a0bf|
   unmerged add first commit                                             c84f226|
                                                                                |
 Remote origin                                                                  |
   origin/HEAD add initial-file                                          b66a0bf|
   origin/main add initial-file                                          b66a0bf|
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
? Really discard? (y or n) › █                                                  |
styles_hash: a2c3a454567562d9
