src/tests/snapshots/gitu__tests__discard__discard_branch_confirm_prompt.snap
---
source: src/tests/discard.rs
assertion_line: 15
expression: ctx.redact_buffer()
---
 Branches                                                                       |
▌  asd add initial-file                                                  b66a0bf|
 * main add initial-file                                                 b66a0bf|
                                                                                |
 Remote origin                                                                  |
   origin/HEAD add initial-file                                          b66a0bf|
   origin/main add initial-file                                          b66a0bf|
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
? Really discard? (y or n) › █                                                  |
styles_hash: 2131d29c7a75cd2e
