src/tests/snapshots/gitu__tests__discard__discard_branch_no.snap
---
source: src/tests/discard.rs
assertion_line: 29
expression: ctx.redact_buffer()
---
 Branches                                                                       |
▌  asd merged add initial-file                                           b66a0bf|
 * main merged add initial-file                                          b66a0bf|
                                                                                |
 Remote origin                                                                  |
   origin/HEAD merged add initial-file                                   b66a0bf|
   origin/main merged add initial-file                                   b66a0bf|
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: d30af95bb1691c66
