src/tests/snapshots/gitu__tests__discard__discard_branch_yes.snap
---
source: src/tests/discard.rs
assertion_line: 22
expression: ctx.redact_buffer()
---
 Branches                                                                       |
▌* main merged add initial-file                                          b66a0bf|
                                                                                |
 Remote origin                                                                  |
   origin/HEAD merged add initial-file                                   b66a0bf|
   origin/main merged add initial-file                                   b66a0bf|
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git branch -d asd                                                             |
Deleted branch asd (was b66a0bf).                                               |
styles_hash: 505886c296c38b8c
