src/tests/snapshots/gitu__tests__discard__unmerged_branch_selected.snap
---
source: src/tests/discard.rs
assertion_line: 139
expression: ctx.redact_buffer()
---
 Branches                                                                       |
 * main add initial-file                                                 b66a0bf|
▌  merged add initial-file                                               b66a0bf|
                                                                                |
 Remote origin                                                                  |
   origin/HEAD add initial-file                                          b66a0bf|
   origin/main add initial-file                                          b66a0bf|
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git branch -d -f unmerged                                                     |
Deleted branch unmerged (was c84f226).                                          |
styles_hash: 75de3b6e2c604f64
