src/tests/snapshots/gitu__tests__discard__unmerged_branch_selected_unmerged_confirm.snap
---
source: src/tests/discard.rs
assertion_line: 134
expression: ctx.redact_buffer()
---
 Branches                                                                       |
 * main add initial-file                                                 b66a0bf|
   merged add initial-file                                               b66a0bf|
▌  unmerged add first commit                                             c84f226|
                                                                                |
 Remote origin                                                                  |
   origin/HEAD add initial-file                                          b66a0bf|
   origin/main add initial-file                                          b66a0bf|
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
? Branch is not fully merged. Really delete? (y or n) › █                       |
styles_hash: 66728bbc4df9ec71
